--- a/MyApp/www/index.html
+++ b/MyApp/www/index.html
@@ -39,8 +39,7 @@
                 <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
 
                 <div class="caption p0">
-                    ...
-                    لطفـــا چند لحظه صبر کنید
+                    ... لطفـــا چند لحظه صبر کنید
                 </div>
 
             </section>
